--- a/app.json
+++ b/app.json
@@ -1,11 +1,12 @@
 
+
 {
 
-    "name": "Unkniwntxt",
+    "name": "PARADISE",
 
-    "description": "Download videos from various websites using this telegram bot",
+    "description": "A Modular telegram bot.",
 
-    "repository": "https://github.com/Martyy2003/Unkniwntxt",
+    "repository": "https://github.com/imacekun/cw-dl",
     "buildpacks":[
         {
             "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
@@ -31,19 +32,22 @@
 
         "BOT_TOKEN": {
 
-            "description": "Your Bot token from @Botfather"
+            "description": "Your Bot token from @Botfather",
+            "value": "6887502068:AAEpQVEnZsgaOPg35_77654QzxPwAPrYahs"
 
         },
 
         "API_ID": {
 
-            "description": "Your API_ID from https://my.telegram.org/apps"
+            "description": "Your API_ID from https://my.telegram.org/apps",
+            "value": "20346550"
 
         },
 
         "API_HASH": {
 
-            "description": "Your API_HASH from https://my.telegram.org/apps"
+            "description": "Your API_HASH from https://my.telegram.org/apps",
+            "value": "bc79c3bea7a626887bdc0871eecf0327"
 
         }
 
@@ -58,8 +62,8 @@
         },
        {
             "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
-       }
-       
+        }
+
     ]
 
 }
